# FPrecision-Demotion

./: .gitignore  CMakeLists.txt  README.md  SETUP_COMPLETE.md  WEB_INTERFACE_README.md  build.sh  setup.sh  test_setup.sh  test_simple.c  test_upload.c
.next/: trace
backend/: .gitignore  package-lock.json  package.json  server.js
backend/uploads/: .gitkeep
frontend/: .gitignore  package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/analyze/: route.ts
frontend/components/: CodeBlock.tsx  CodeDisplay.tsx  FileUpload.tsx  MemoryAnalysis.tsx
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.js  index.css
frontend/src/components/: CodeDisplay.css  CodeDisplay.js  FileUpload.css  FileUpload.js  MemoryAnalysis.css  MemoryAnalysis.js
frontend/types/: index.ts
src/: Fp16DemotionPlugin.cpp
test/: complex_test.c  comprehensive_test.c  demoted.c  float_map.json  fp16_test  memory_analysis.txt  run_tests.sh  simple_demo.c  test.c
